--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,2 @@
-<h1> welcome </h1>
-<h2>{{userName}} </h2>
-
-<img src="facebook.jpg" width="500" height="300" />
+<h1 style="color: green ">Your name was saved in data base.</h1><br>
+<h2 style="color: #cc6600 ">To display it just type "/display" in URL</h2>
