--- a/templates/main.html
+++ b/templates/main.html
@@ -1,1 +1,2 @@
-<h1>This is the first time using JavaScript templating engines </h1>
+<!-- <h1 style="color: Blue">Hello Everybody :) </h1> -->
+<img src="hello.jpg" width="1200" height="600"/>
